HtmlUi: Fix z-index for top-level elements

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/main.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/main.css
@@ -229,9 +229,13 @@ a,
 .scout > .desktop-bench,
 .scout > .splitter,
 .scout > .glasspane,
+.scout > .busyindicator,
 .scout > .dialog,
 .scout > .form,
+.scout > .messagebox,
 .scout > .tooltip,
+.scout > .popup,
+.scout > .form-tool-popup,
 .scout > .smart-field-popup,
 .scout > .date-picker-popup {
   z-index: 0;
